@@ -1,5 +1,5 @@
 HACK000C
-TODO0013
+TODO0014
 
 high prio
 - TODO0001 implement blitters and related functions
@@ -28,3 +28,4 @@ low prio
 - TODO000A Memory leak?
 - TODO0012 Is this fix for the infinite loop when throwing right?
 - TODO0013 Code and comment disagree
+- TODO0014 Properly resolve the bReverse mess
